--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,7 +3,7 @@ project:
   output-dir: docs
 
 website:
-  title: "avivnur"
+  title: "Aviv Nur"
   navbar:
     left:
       - href: index.qmd
@@ -14,7 +14,7 @@ format:
   html:
     theme: cosmo
     css: styles.css
-    toc: true
+    page-layout: full
 
 editor: visual
 
